# planz

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-base.txt  requirements.txt
app/: __init__.py  config.py  logging.py  main.py
app/api/: __init__.py  actions.py  admin.py  deps.py  ics.py  ui.py  user_feed.py
app/core/: __init__.py  auth.py  env.py  jwt.py  security.py  urls.py
app/database/: mongo.py
app/db/: __init__.py  session.py
app/domain/: constants.py
app/models/: user.py
app/pipelines/: weekly_run.py
app/scripts/: backfill_categories.py  backfill_event_paid.py  calendar_wipe_planz.py  dev_create_test_event.py  diagnose_source_url.py  extract_events.py  extract_muenchen_kinder.py  extract_single_url.py  fetch_sources.py  llm_discover_sources.py  llm_ingest_and_sync.py  migrate_db.py  run_weekly.py  search_and_seed_sources.py  seed_and_sync_event.py
app/services/: __init__.py
app/templates/: base.html  connect.html  landing.html  login.html  settings.html  setup.html  signup.html
app/tests/: __init__.py  test_acquisition_issues.py  test_agents_md.py  test_calendar_interface.py  test_calendar_sync_events.py  test_calendar_time_window.py  test_calendar_wipe_markers.py  test_diagnose_heuristics.py  test_discovery_verified.py  test_env_and_weekly.py  test_event_category_schema.py  test_event_key.py  test_event_series_cache.py  test_event_upsert_external_key.py  test_extract_single_url.py  (+37 more)
planz/: pyvenv.cfg
tests/: agent.py  ollama_agent.py  openai_agent.py
(+60 files in other folders)
